--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -127,7 +127,7 @@
   margin-left: 40px;
 }
 
-.properties-container-naples-house-five, .properties-container-rome-house-three, .properties-container-venice-last, .properties-container-florence-last, .properties-geneva-house-last, .properties-zurich-last, .properties-bern-last, .lucerne-last-house, .edinburgh-last, .property-glasgow-last, .property-warsaw-last, .property-wroclaw-last, .property-gdansk-last, .property-krakow-last, .property-copenhagen-last, .property-bucharest-last, .property-amsterdam-last, .property-rotterdam-last {
+.properties-container-naples-house-five, .properties-container-rome-house-three, .properties-container-venice-last, .properties-container-florence-last, .properties-geneva-house-last, .properties-zurich-last, .properties-bern-last, .lucerne-last-house, .edinburgh-last, .property-glasgow-last, .property-warsaw-last, .property-wroclaw-last, .property-gdansk-last, .property-krakow-last, .property-copenhagen-last, .property-bucharest-last, .property-amsterdam-last, .property-rotterdam-last, .proerpty-oslo-last {
   margin-top: 30px;
   margin-left: 365px;
 }
@@ -214,7 +214,7 @@
   margin-left: 30px;
 }
 
-.properties-geneva-house-two, .properties-zurich-house, .properties-bern-house-one, .lucerne-properties, .property-glasgow-house-one, .property-warsaw-house-two, .property-wroclaw-house-two, .property-gdansk-house-two, .property-krakow-house-two, .property-copenhagen-house-two, .property-bucharest-house-two, .property-amsterdan-house-two, .property-rotterdam-house-two {
+.properties-geneva-house-two, .properties-zurich-house, .properties-bern-house-one, .lucerne-properties, .property-glasgow-house-one, .property-warsaw-house-two, .property-wroclaw-house-two, .property-gdansk-house-two, .property-krakow-house-two, .property-copenhagen-house-two, .property-bucharest-house-two, .property-amsterdan-house-two, .property-rotterdam-house-two, .proerpty-oslo {
   margin-top: 20px;
   margin-left: 40px;
 }
