--- a/css-files/index-content.css
+++ b/css-files/index-content.css
@@ -4,7 +4,6 @@ body {
 
 
 /* Top Picture & filter*/
-
 .top-picture {
   position: relative;
   height: 710px;
@@ -144,7 +143,6 @@ body {
 
 
 /* Newest Properties*/
-
 .properties-on-market {
   margin-left: 5%;
   margin-right: 5%;
@@ -280,8 +278,6 @@ body {
 
 
 /* Learn More content */
-
-
 .info-content {
   margin-top: 100px;
   margin-bottom: 50px;
@@ -406,7 +402,7 @@ body {
 
 
 
-
+/* Rentals, share the same CSS as properties-on-market */
 .rentals-on-market {
   margin-left: 5%;
   margin-right: 5%;
@@ -440,8 +436,97 @@ body {
 
 
 
-/* Newsletter */
+/* Meet the team */
+.meet-the-team {
+  margin-left: 5%;
+  margin-right: 5%;
+  color: #203036;
+  margin-bottom: 150px;
 
+  h3 {
+    font-size: 40px;
+    margin-bottom: 15px;
+  }
+  p {
+    margin-top: 0px;
+    font-size: 22px;
+  }
+  .under-text-team {
+    margin-top: 50px;
+  }
+
+  .team-mates {
+    overflow-x: scroll;
+    display: flex;
+    flex-direction: row;
+    gap: 35px;
+    height: 550px;
+    align-items: center;
+
+    .agent {
+      background-color: #203036;
+      box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
+      display: flex;
+      flex-direction: row;
+      width: 750px;
+      height: 500px;
+      border-radius: 5px;
+      color: white;
+      text-decoration: none;
+
+      .agent-textbox {
+        width: 250px;
+        margin-left: 15px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+        h4 {
+          margin-top: 0px;
+        }
+
+        .contact-info-agent {
+          margin-top: 50px;
+
+          .agent-phone, .agent-email {
+            display: flex;
+            flex-direction: row;
+            gap: 10px;
+  
+            p {
+              font-size: 21px;
+            }
+  
+            i {
+              margin-top: 2.5px;
+              font-size: 20px;
+            }
+          }
+        }
+
+      }
+
+      img {
+        height: 500px;
+        width: 300px;
+        object-fit: cover;
+        object-position: center;
+        border-radius: 5px 0px 0px 5px;
+      }
+
+      &:hover {
+        transition: 0.2s;
+        transform: scale(1.1);
+        background-image: linear-gradient(to top, rgba(8, 96, 57, 0.799), rgba(0, 0, 0, 0)),
+        url();
+      }
+    }
+  }
+}
+
+
+
+/* Newsletter */
 .bottom-content {
   position: relative;
   width: 101.5%;
@@ -533,401 +618,4 @@ body {
 }
 
 
-/* Make it responsive to smaller size screen*/
 
-@media (max-width: 1760px) {
-
-  .content1-properties {
-    margin-top: 55px;
-    margin-bottom: 55px;
-    margin-right: 10%;
-  }
-
-  .properties {
-    padding-top: 35px;
-    padding-bottom: 35px;
-    overflow-x: scroll;
-    overflow-y: hidden;
-  }
-
-  #last-property-all {
-    .property-next-button {
-      margin-top: 145px;
-      margin-left: 150px;
-    }
-  }
-}
-
-@media (max-width: 1290px) {
-  
-.top-pic img{
-  height: 500px;
-}
-
-.top-pic-content {
-  top: 35%;
-}
-
-.top-pic-text {
-  font-size: 25px;
-}
-
-.top-pic-filters {
-  width: 650px;
-  height: 65px;
-}
-
-.filter {
-  display: flex;
-  align-items: center;
-  margin-inline: 20px;
-}
-
-.filter-text p {
-  width: 100%;
-  font-size: 15px;
-  font-weight: bold;
-  margin-bottom: 10px;
-}
-
-.filter-text span {
-  font-size: 12px;
-  opacity: 60%;
-  margin-top: 0px;
-}
-
-.filter i {
-  opacity: 75%;
-  margin-right: 10px;
-  margin-top: 5px;
-  padding: 5px;
-  font-size: 18px;
-  border: solid black 1px;
-  border-radius: 9999px;
-}
-
-#location-icon {
-  padding-top: 3px;
-  padding-bottom: 3px;
-}
-
-.filter-results {
-  margin-right: 2%;
-}
-
-.filter-results p {
-  padding-right: 15px;
-  padding-left: 15px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  font-size: 20px;
-}
-
-}
-
-@media (max-width: 950px) {
-  
-
-  .content1-properties {
-    margin-top: 55px;
-    margin-bottom: 55px;
-    h2 {
-      font-size: 25px;
-      color: #203036;
-    }
-  }
-
-  .properties {
-    padding-top: 35px;
-    padding-bottom: 35px;
-    overflow-x: scroll;
-    overflow-y: hidden;
-  }
-
-  #last-property-all {
-    .property-next-button {
-      margin-top: 145px;
-      margin-left: 150px;
-    }
-  }
-
-}
-
-@media (max-width: 750px) {
-
-  .eco-friendly-image {
-    display: none;
-  }
-  
-  .selling-image {
-   display: none;
-  }
-
-  .buying-image {
-   display: none;
-  }
-
-  .content2-eco {
-    margin-bottom: 50px;
-    height: 400px;
-  }
-
-  .content2-selling {
-    margin-bottom: 50px;
-    height: 400px;
-  }
-
-  .content2-buying {
-    margin-bottom: 0px;
-    height: 400px;
-  }
-
-  .newsletter {
-    margin-top: 100px;
-    height: 300px;
-  }
-
-  .newsletter-text {
-    line-height: 10px;
-    margin-top: 20px;
-  }
-  
-  .newsletter-text h3 {
-    font-size: 37.5px;
-    font-weight: bolder;
-  }
-  
-  .newsletter-text p {
-    font-size: 19px;
-  }
-  
-  .nexsletter-emailbox {
-    gap: 10px;
-    margin-top: 50px;
-  }
-  
-  .enter-email {
-    width: 400px;
-    height: 35px;
-  }
-  
-  .enter-email p {
-    font-size: 22px;
-    padding: 5px;
-    margin-left: 10px;
-  }
-  
-  .submit-button {
-    height: 40px;
-    font-size: 18px;
-  }
-  
-  .submit-button p {
-    padding-left: 15px;
-    padding-right: 15px;
-  }
-}
-
-/* Make it responsive to phones */
-
-@media (max-width: 675px) {
-
-  .top-pic img{
-    height: 400px;
-  }
-  
-  .top-pic-content {
-    top: 30%;
-  }
-  
-  .top-pic-text {
-    font-size: 20px;
-  }
-  
-  .top-pic-filters {
-    width: 500px;
-    height: 50px;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .filter {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-  }
-  
-  .filter-text p {
-    width: 100%;
-    font-size: 15px;
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-  
-  .filter-text span {
-    font-size: 12px;
-    opacity: 60%;
-    margin-top: 0px;
-  }
-  
-  .filter i {
-    opacity: 75%;
-    margin-right: 10px;
-    margin-top: 5px;
-    padding: 5px;
-    font-size: 18px;
-    border: solid black 1px;
-    border-radius: 9999px;
-  }
-  
-  #location-icon {
-    padding-top: 3px;
-    padding-bottom: 3px;
-  }
-  
-  .filter-results {
-    width: 100%;
-    justify-content: center;
-  }
-  
-  .filter-results p {
-    padding-right: 15px;
-    padding-left: 15px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    font-size: 20px;
-  }
-
-  .content2-eco {
-    margin-bottom: 50px;
-    height: 350px;
-  }
-
-  .content2-selling {
-    margin-bottom: 50px;
-    height: 350px;
-  }
-
-  .content2-buying {
-    margin-bottom: 0px;
-    height: 350px;
-  }
-
-  .eco-friendly-left {
-    margin-left: 5%;
-    margin-right: 5%;
-  }
-  
-  .eco-friendly-textbox {
-    color: #203036;
-    font-size: 20px;
-  }
-   
-  .learn-more-button a p {
-    padding: 10px;
-    border-radius: 999px;
-    padding-left: 30px;
-    padding-right: 30px;
-    font-size: 16px;
-  }
-
-  .buying-left {
-    margin-left: 5%;
-  }
-  
-  .buying-textbox {
-    font-size: 20px;
-    color: #203036;
-  }
-
-  .selling-textbox {
-  color: white;
-  font-size: 20px;
-  }
-
-  #selling-content-button a p {
-  padding: 10px;
-  border-radius: 999px;
-  color: #203036;
-  padding-left: 30px;
-  padding-right: 30px;
-  font-size: 16px;
-  }
-
-}
-
-@media (max-width: 580px) {
-
-  .top-pic-text {
-    text-align: center;
-    font-size: 17px;
-    line-height: normal;
-    margin-bottom: 0px;
-    h2 {
-      margin-bottom: 0px;
-    }
-    h1 {
-      margin-top: 0px;
-    }
-  }
-  
-  .top-pic-filters {
-    width: 300px;
-    height: 50px;
-    margin-top: 25px;
-    width: 100%;
-  }
-  
-  .filter {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-right: 0px;
-    margin-left: 0px;
-    justify-content: space-around;
-  }
-  
-  .filter-text p {
-    display: none;
-  }
-  
-  .filter-text span {
-    display: none;
-  }
-  
-  .filter i {
-    opacity: 85%;
-    margin-right: 0px;
-    margin-left: 0px;
-  }
-  
-  #location-icon {
-    padding-top: 3px;
-    padding-bottom: 3px;
-  }
-
-  
-  .content2-selling {
-    margin-bottom: 50px;
-    height: 400px;
-  }
-
-  .content2-buying {
-    margin-bottom: 0px;
-    height: 400px;
-  }
-
-}
-
-@media (max-width: 375px) {
-  .eco-friendly-left {
-    gap: 0px;
-  }
-  .selling-right {
-    gap: 0px;
-  }
-  .buying-left {
-    gap: 0px;
-  }
-}
