--- a/css-files/properties-all.css
+++ b/css-files/properties-all.css
@@ -1,188 +1,219 @@
-.content {
-    display: flex;
-    overflow-x: hidden;
-  }
-  
-  .rent-properties-content {
-    margin-top: 100px;
-    margin-bottom: 100px;
-    margin-left: 400px;
-    margin-right: 1%;
-    width: 100%;
-  }
+body {
+  overflow-x: hidden;
+}
 
-  .rentals {
-    display: inline-flex;
-    justify-self: flex-start;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 7%;
-    margin-right: 2%;
-  }
+.page-body {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 
-  .property {
-    margin-bottom: 75px;
-      display: flex;
-      flex-direction: column;
-      max-width: 35.5%;
-      min-width: 30%;
-      height: 560px;
-      background-color:#556165;
-      border-radius: 5px;
-      box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
-      &:hover {
-        transform: scale(1.05);
-        background-color:#203036;
-        box-shadow: 2px 2px 10px 2px rgba(221, 255, 2, 0.565);
+.page-body::before, .page-body::after {
+  content: '';
+  display: table;
+  clear: both;
+}
+
+
+
+.side-filters {
+  top: 0px;
+  left: 0px;
+  margin-left: -8px;
+  margin-top: -8px;
+  max-height: 100vh;
+  width: 250px;
+  position: sticky;
+  display: flex;
+  flex-direction: column;
+  background-color: #556165;
+
+
+  .filter-content {
+      margin-top: 25px;
+      margin-left: 25px;
+      width: 250px;
+      top: 0;
+      left: 0;
+      color: white;
+
+      p {
+          opacity: 75%;
+          font-size: 20px;
+          font-style: italic;
       }
   }
-  
-  .property .property-top img {
-      object-fit: cover;
-      object-position: center;
-      background-size: cover;
-      width: 100%;
-      border-radius: 5px 5px 0px 0px;
+
+  .gobackbutton {
+      margin-bottom: 50px;
+
+       button {
+          cursor: pointer;
+          color: white;
+          font-size: 17px;
+          padding: 5px;
+          padding-left: 15px;
+          padding-right: 15px;
+          background-color: #203036;
+          border-radius: 9999px;
+          opacity: 75%;
+          border: solid 2px #203036;
+          &:hover {
+            box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
+            opacity: 100%;
+          }
+        }
   }
 
-  .property-house {
-      margin-bottom: 75px;
+  .filter-container {
+      display: flex;
+      flex-direction: column;
+
+      h3 {
+          font-size: 20px;
+          margin-bottom: 15px;
+      }
+  }
+
+  .filters {
+      display: flex;
+      flex-direction: column;
+      font-size: 19px;
+      margin-bottom: 25px;
+
+      .filtercontainer input {
+          cursor: pointer;
+      }
+  }
+
+  .budget {
+
+      h3 {
+          font-size: 20px;
+      }
+
+      .budget-slider {
+          display: flex;
+          flex-direction: column;
+          gap: 5px;
+      }
+
+      .budget-price {
+          .minimum-price {
+              margin-right: 7px;
+          }
+
+          span {
+              margin-right: 5px;
+              font-size: 20px;
+          }
+
+          input {
+              width: 90px;
+          }
+      }
+  }
+}
+
+
+
+
+.properties-content {
+  margin-top: 50px;
+  margin-bottom: 150px;
+  margin-left: 75px;
+  margin-right: 5%;
+  width: 100%;
+
+  .properties {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    gap: 55px;
+  
+    .property {
+  
+        color: white;
+        text-decoration: none;
+        height: 500px;
+        width: 400px;
         display: flex;
+        align-items: center;
         flex-direction: column;
-        max-width: 35.5%;
-        min-width: 30%;
-        height: 560px;
         background-color:#556165;
         border-radius: 5px;
         box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
+  
+        .photo {
+            margin-top: -35px;
+            width: 400px;
+            height: 300px;
+  
+            img {
+              width: 100%;
+              height: 100%; 
+              border-radius: 5px 5px 0px 0px;
+              object-fit: cover;
+            }
+        }
+  
+        .type {
+            position: relative;
+            width: 175px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: white;
+            height: 35px;
+            border-radius: 0px 0px 5px 5px;
+  
+            p {
+                color: #203036;
+                font-weight: bold;
+                font-size: 18px;
+            }
+        }
+  
+        .info {
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            gap: 0px;
+            justify-content: center;
+            padding-top: 0px;
+            width: 400px;
+            border-radius: 0px 0px 5px 5px;
+            color: white;
+  
+            h2 {
+                margin-top: 15px;
+                margin-bottom: 15px;
+                font-size: 30px;
+            }
+            p{
+                margin-top: 0px;
+                margin-bottom: 10px;
+                font-size: 22px;
+            }
+        }
+    
         &:hover {
-          transform: scale(1.05);
-          background-color:#203036;
-          box-shadow: 2px 2px 10px 2px rgba(0, 179, 255, 0.468);
+            background-color: #203036;
+            transition: 0.2s;
+            transform: scale(1.06);
+            box-shadow: 2px 2px 10px 2px rgba(0, 166, 255, 0.55);
         }
+    }
   }
+}
 
-  .property-house .property-top img {
-        object-fit: cover;
-        object-position: center;
-        background-size: cover;
-        width: 100%;
-        border-radius: 5px 5px 0px 0px;
-  }
+#house {
 
-  .property-top {
-        position: relative;
-        .category{
-            color: #203036;
-            position: absolute;
-            left: 33%;
-            top: 0px;
-            padding: 0px;
-            margin-top: 0px;
-
-            p{
-                font-size: 20px;
-                font-weight: bold;
-                margin-top: 0px;
-                background-color: white;
-                padding-left: 40px;
-                padding-right: 40px;
-                padding-top: 5px;
-                padding-bottom: 10px;
-                border-radius: 0px 0px 9999px 9999px;
-            }
-        }
-        .category-house{
-            color: #203036;
-            position: absolute;
-            left: 36%;
-            top: 0px;
-            padding: 0px;
-            margin-top: 0px;
-
-            p{
-                font-size: 20px;
-                font-weight: bold;
-                margin-top: 0px;
-                background-color: white;
-                padding-left: 40px;
-                padding-right: 40px;
-                padding-top: 5px;
-                padding-bottom: 10px;
-                border-radius: 0px 0px 9999px 9999px;
-            }
-        }
-  }
-
-  .property-top img {
-      object-fit: cover;
-      object-position: center;
-      width: 485px;
-      height: 350px;
-      border-radius: 5px 5px 0px 0px;
-  }
-
-  .property-text {
-      color: white;
-      display: flex;
-      flex-direction: column;
-      text-align: center;
-      align-self: center;
-      line-height: 0px;
-      font-size: 22px;
-      h2 {
-        font-size: 27px;
-        margin-bottom: 25px;
-      }
-  }
-
-  .property-text span {
-      font-weight: bold;
-  }
-  
-  @media (max-width: 1492px) {
-
-      .rent-properties-content {
-        margin-top: 75px;
-        margin-bottom: 75px;
-        margin-left: 5%;
-      }
-  
-      .top-filter-rent {
-        width: 150px;
-      }
-  
-      .property {
-        margin-bottom: 45px;
-      }
-  }
-  
-  @media (max-width: 1409px) {
-      .rent-properties-content {
-        margin-top: 25px;
-        margin-bottom: 25px;
-        margin-left: 2.5%;
-        margin-right: 0.5%;
-      }
-  
-      .property {
-        margin-bottom: 25px;
-      }
-  
-      .rentals {
-        gap: 2%;
-      }
-      .top-filter-rent {
-        padding-left: 25px;
-        padding-bottom: 45px;
-        width: 200px;
-        p {
-          font-size: 17px;
-          width: 200px;
-        }
-        h2 {
-          font-size: 25px
-        }
-      }
-  
-  }
+  &:hover {
+    background-color: #203036;
+    transition: 0.2s;
+    transform: scale(1.06);
+    box-shadow: 2px 2px 10px 2px rgba(246, 255, 0, 0.55);
+}
+}
