--- a/css-files/login.css
+++ b/css-files/login.css
@@ -1,5 +1,5 @@
 #login-container {
-    border-radius: 2px solid #000000;
+    border: 2px solid #000000;
     background-color: #203036;
     width: 950px;
     height: 400px;
@@ -32,12 +32,14 @@
     width: 200px;
     margin-left: 390px;
     margin-top: 50px;
+    border: 2px solid #000000;
 }
 
 #login-form-button:hover, #login-form-create-account-button:hover {
     background-color: #0C1435;
     width: 300px;
     height: 400px;
+    border: 2px solid #203036;
 }
 
 #login-form-button a {
@@ -56,6 +58,7 @@
     border-radius: 15px;
     width: 250px;
     margin-left: 350px;
+    border: 2px solid #000000;
 }
 
 #login-form-create-account-button a {
@@ -78,7 +81,8 @@
     width: 1400px;
     border-radius: 15px;
     margin-left: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+    margin-top: 20px;
 }
 
 .hero-text-login {
