--- a/css-files/login-account-register.css
+++ b/css-files/login-account-register.css
@@ -91,3 +91,25 @@
     text-align: center;
     padding: 10px 10px 10px 10px;
 }
+
+#create-account-form {
+    width: 1000px;
+    height: 500px;
+    background-color: #203036;
+    margin-left: 250px;
+    margin-bottom: 40px;
+    border-radius: 15px;
+    border: 2px solid #000000;
+}
+
+#create-account-form label {
+    font-size: 30px;
+    color: #ffffff;
+    margin-left: 250px;
+    padding-top: 20px;
+}
+
+#create-account-form input {
+    width: 250px;
+    height: 15px;
+}
